# fastapi-seminar-2024-assignment-2-fastapi-assignment-1

./: .env.local  .env.prod  .env.test  .gitignore  README.md  alembic.ini  pyproject.toml
wapang/: api.py  main.py  settings.py
wapang/app/item/: errors.py  models.py  service.py  store.py  views.py
wapang/app/item/dto/: requests.py  responses.py
wapang/app/order/: enums.py  errors.py  models.py  service.py  store.py  views.py
wapang/app/order/dto/: requests.py  responses.py
wapang/app/store/: errors.py  models.py  service.py  store.py  views.py
wapang/app/store/dto/: requests.py  responses.py
wapang/app/user/: errors.py  models.py  service.py  store.py  views.py
wapang/app/user/dto/: requests.py  responses.py
wapang/common/: errors.py  utils.py
wapang/database/: __init__.py  annotation.py  common.py  connection.py  middleware.py  settings.py
wapang/database/alembic/: env.py  script.py.mako
wapang/database/alembic/versions/: 2024_10_07-6b2aaf557658_user.py  2024_11_02-5369e40839d9_store_and_item.py  2024_11_13-dbb8a7a12f5b_store_item_order.py  2024_11_17-7d5ba57fd8b0_order_item.py  2024_12_06-86b9a55d847d_blocked_token.py
