[tool.poetry]
name = "fastapi-assignment-1"
version = "0.1.0"
description = ""
authors = ["Minkyu Lee <whizkyu@snu.ac.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
pymysql = "^1.1.1"
alembic = "^1.13.3"
email-validator = "^2.2.0"
pydantic-settings = "^2.5.2"
cryptography = "^43.0.1"
aiomysql = "^0.2.0"
pyjwt = "^2.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
